# muslim-prayer-times

./: README.md  package-lock.json  package.json  tsconfig.json
app/: FrontPage.tsx  layout.tsx  page.tsx
app/components/: AddPrayer.tsx  BottomNavigation.tsx  Calendar.tsx  HomePage.tsx  Quran.tsx  Statistics.tsx  Surah.tsx  TodayVerse.tsx  customDateRangeStyles.css
app/hook/: useGetLocalTimes.ts  useGetLocation.ts  useGetPrayerTimes.ts  useGetQuranData.ts  useGetSurahTranslation.ts  useGetTodayVerse.ts
app/utils/: image.ts
src-tauri/: Cargo.toml  prayer_tracker.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  heatmap.rs  main.rs  model.rs
